# libreoffice__build

./: .gitignore  AUTHORS  COPYING.NEWFILES  MAINTAINERS  Makefile.am  Makefile.shared  NEWS  README  TODO  TOTEST  autogen.sh  configure.in  download.in  download_external_sources.sh  download_tests_dependencies.sh  emacs.el
desktop/: .cvsignore  Makefile.am  base.desktop.in.in  calc.desktop.in.in  draw.desktop.in.in  drawing.desktop.in  impress.desktop.in.in  math.desktop.in.in  ooo-extension-manager.desktop.in.in  openoffice-extra.keys.in  openoffice.applications.in  openoffice.keys  openoffice.keys.in  openoffice.mime  presentation.desktop.in  spreadsheet.desktop.in  startcenter.desktop.in.in  template.desktop.in.in  textdoc.desktop.in  web.desktop.in  web.desktop.in.in  writer.desktop.in.in
distro-configs/: .cvsignore  Ark.conf.in  Common.conf.in  CommonLinux.conf.in  CommonMac.conf.in  CommonWin32.conf.in  CrossWin32.conf.in  Debian.conf.in  DroplineGNOME.conf.in  DroplineGNOME64.conf.in  FSFhuLinux.conf.in  FSFhuWindows.conf.in  Frugalware.conf.in  Gentoo.conf.in  GoOoLinux.conf.in  GoOoMacOSX.conf.in  GoOoWin32.conf.in  LibreOfficeLinux.conf.in  LibreOfficeLinuxDevel.conf.in  LibreOfficeMacOSX.conf.in  LibreOfficeOpenBSD.conf.in  LibreOfficeWin32.conf.in  LibreOfficeWin64.conf.in  NLD.conf.in  NovellWin32.conf.in  NovellWin32Eval.conf.in  NovellWin32ISO.conf.in  OOo4Kids.conf.in  OxygenOfficeLinux.conf.in  OxygenOfficeWindows.conf.in  Pardus2007.conf.in  Pardus2008.conf.in  PlainLinux.conf.in  RHEL4.conf.in  Raw.conf.in  SUSE-10.1.conf.in  SUSE-10.2.conf.in  SUSE-10.3.conf.in  SUSE-11.0.conf.in  SUSE-11.1.conf.in  (+7 more)
doc/: AUTOGEN.NovellWin32ISO.sh  calc-usability-notes.txt  class_diagram.odg  fontcrash.txt  internal-libdb-java-issue.txt  l10n.txt  layout.txt  local.txt  localization.txt  migration.txt  novell-win32-incremental-patch-build.txt  nsis-broffice.txt  patches-list.txt  registry.txt  splash.txt  stat-localizations.txt  sw-flr.otl  updating-patches-using-git.txt  vba-autotext-notes.txt  word-embossed-colors.ods
extensions/coooder/: description.xml
extensions/ooo2gd/: README  build.xml
extensions/tweakconfig/: Common.xcu  Impress.xcu  Makefile.am  description.xml
extensions/watchwindow/: README  build.xml  watchwindow-leave-ref-flags-alone.diff  watchwindow-variable-formula-syntax.diff
git-hooks/: commit-msg  pre-commit
man/: Makefile.am  libreoffice.1.in  openoffice.1.in  unopkg.1.in
patches/: Makefile.am  README  apply.pl.in  order  vba-transient-imported-autotext.diff
patches/64bit/: 64bit-jdk-server-paths.diff  events-intptr.diff
patches/OOO_1_1/: 6438333-applets-so7-officecfg.diff  allow-free-jars.diff  autosave-on.diff  basic-array-fix.diff  build-split-resources.diff  build-versioning.diff  calc-new-acceleration.diff  config-switches.diff  crash-sd-background.diff  crash-sw-checkbox-field.diff  debian-splash.diff  default-graphics-cache.diff  desktop-debug-fix.diff  disable-hindi-kannada.diff  dmake43.diff  email-attachment.diff  find-xinerama.diff  fixup-typedetection-mimetypes.diff  formel-hxx.diff  fpicker-common.diff  fpicker-kde-urls.diff  fpicker-kde.diff  frmbase-cxx.diff  gcc34-gcc343.diff  gui-toolbox-large-icons.diff  hebrew-culmus.diff  help-fallback.diff  i18n-add-ta-gu-support.diff  i18n-calc-encoding.diff  i18n-indic-bengali-fallback.diff  i18n-indic-default-fonts.diff  i18n-indic-resource-fixes.diff  i18n-lang-italian-fontooowizard.diff  i18n-lang-typo-italian.diff  iiimf-multilingual-extension-2-enable.diff  java-path-blackdown.diff  l10n-YTL.diff  libgl-soname.diff  linux-arm-support.diff  lt-fixes.diff  (+85 more)
patches/OOO_1_1_0/: apply
patches/OOO_1_1_1/: apply
patches/OOO_1_1_2/: apply  gui-toolbox-large-icons.diff  word-count.diff
patches/OOO_1_1_3/: apply  i18n-add-ta-gu-support.diff  i18n-indic-bengali-fallback.diff
patches/OOO_1_1_4/: apply  transex3-gsi-format-fixes.diff  vcl-util.diff
patches/OOO_1_1_5/: Makefile.am  apply
patches/OOO_2_0/: apply  version-2-0-nopre.diff
patches/OOO_2_0_1/: README
patches/cairo/: cairo-cairo-1-4-0-diff.diff  cairo-canvas-cairo.diff  cairo-canvas-win32.diff
patches/dev300/: .gitignore  2005-express-stl-remove.diff  DEFAULT_TO_ENGLISH_FOR_PACKING-filenames.diff  about-build-ver-readability.diff  about-dialog-cleanup.diff  accept-underscores-in-hostnames.diff  addrbk-datasrc-ordering.diff  always-create-backups.diff  always-save-option-officecfg.diff  always-save-option-sfx2.diff  always-save-option-svtools.diff  always-save-option-svx.diff  always_default_iconset.diff  angola.diff  apache-commons-build-fix-invalid-chars.diff  apple-remote-update.diff  apply  ark-default-ExternalMailer.diff  ark-experimental-gcj-use-ecj.diff  ark-system-precompiled-java.diff  arm-vis.diff  armeabi-softfp-buildfix.diff  autocorrect-accidental-caps-lock-offapi.diff  autocorrect-accidental-caps-lock-officecfg.diff  autocorrect-accidental-caps-lock-sc.diff  autocorrect-accidental-caps-lock-svx.diff  autocorrect-accidental-caps-lock-sw.diff  autocorrect-accidental-caps-lock-vcl-xkb.diff  autocorrect-accidental-caps-lock-vcl.diff  automation-testtool-oobuildfix.diff  avoid-too-long-filenames.diff  backport-ftruncate-check.diff  basctl-no-macro-recorder-in-ui.diff  (+1491 more)
po/: Makefile.am  af.po  ar.po  az.po  be@latin.po  bg.po  br_FR.sdf  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  en_ZA.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ka.po  ko.po  lo-build-af.po  lo-build-af.sdf  lo-build-ar.po  lo-build-ar.sdf  lo-build-as.po  lo-build-ast.po  lo-build-ast.sdf  (+294 more)
po/sdf-templates/: OxygenOffice.sdf  SUSE.sdf
scratch/: find-undocumented-classes.sh  formatxml.cpp
src/: .gitignore  Makefile.am  Ubuntu.dic  acor.csv  rhino1_5R4.patch  sofficerc-upstream
src/easter/: people.txt
src/eval/: Makefile.am
src/sdf/: calc-formula-option-tree.sdf  de-patches.sdf  fi-patches.sdf  fixes-br.sdf  fixes-hu.sdf  fixes-nb.sdf  hu-fix3.sdf  ko-patches.sdf  novell-win32-eval.sdf  writer-comparison-option-tree.sdf
stamp/: Makefile.am
(+963 files in other folders)
