SUBDIRS=helpcontent2 icons layout sdf

EXTRA_DIST=\
	default_images \
	${wildcard *.dic} \
	Draft.jpg \
	banner_go-oo.bmp \
	banner_nld.bmp \
	cli_uno_bridge.dll.config.in \
	mono-ooo.pc.in \
	nologoinstall_go-oo.bmp \
	nologoinstall_nld.bmp \
	ooosetup_go-oo.ico \
	ooobanner_go-oo.bmp \
	ooobitmap_go-oo.bmp \
	openintro_go-oo.png \
	openabout_go-oo.png \
	ooosetup_nld.ico \
	ooobanner_nld.bmp \
	ooobitmap_nld.bmp \
	openintro_nld.png \
	openintro_nld_eval.png \
	openabout_nld.png \
	openintro_ark.png \
	openabout_ark.png \
	openintro_gentoo.png \
	openintro_translateorgza.png \
	openabout_translateorgza.png \
	openintro_pld.png \
	openabout_pld.png \
	sg3.sdg sg3.sdv sg3.thm \
	sofficerc-upstream \
	tango_mainapp_16.png \
	glib-1.2.10-ooo.patch \
	libIDL-0.6.8-ooo.patch \
	go-oo-team.png
